--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,9 @@
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
-		"express": "^4.21.0",
+		"express": "^4.21.1",
 		"jsonwebtoken": "^9.0.2",
+		"multer": "^1.4.5-lts.1",
 		"mysql": "^2.18.1",
 		"nodemailer": "^6.9.15"
 	}
