--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.11.0",
     "react": "^18.3.1",
+    "react-csv": "^2.2.2",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
