--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "framer-motion": "^11.11.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
